--- a/forms/inscoreline.ui
+++ b/forms/inscoreline.ui
@@ -99,19 +99,6 @@
          <property name="title">
           <string>parameters</string>
          </property>
-         <widget class="QCheckBox" name="display">
-          <property name="geometry">
-           <rect>
-            <x>10</x>
-            <y>30</y>
-            <width>71</width>
-            <height>20</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>display</string>
-          </property>
-         </widget>
          <widget class="QCheckBox" name="size">
           <property name="geometry">
            <rect>
@@ -350,11 +337,22 @@
         </layout>
        </item>
        <item>
-        <widget class="QPushButton" name="removeButton">
-         <property name="text">
-          <string>-</string>
-         </property>
-        </widget>
+        <layout class="QVBoxLayout" name="verticalLayout_4">
+         <item>
+          <widget class="QPushButton" name="removeButton">
+           <property name="text">
+            <string>del</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton">
+           <property name="text">
+            <string>opt</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </item>
