--- a/forms/inscoreline.ui
+++ b/forms/inscoreline.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>951</width>
-    <height>132</height>
+    <width>811</width>
+    <height>141</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>950</width>
-    <height>130</height>
+    <width>800</width>
+    <height>140</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -32,6 +32,30 @@
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <layout class="QVBoxLayout" name="verticalLayout">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_6">
+           <item>
+            <widget class="QPushButton" name="removeButton">
+             <property name="text">
+              <string>delete object</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </item>
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_4">
            <item>
@@ -92,8 +116,8 @@
         <widget class="QGroupBox" name="parametersBox">
          <property name="minimumSize">
           <size>
-           <width>460</width>
-           <height>100</height>
+           <width>310</width>
+           <height>80</height>
           </size>
          </property>
          <property name="title">
@@ -103,7 +127,7 @@
           <property name="geometry">
            <rect>
             <x>10</x>
-            <y>50</y>
+            <y>70</y>
             <width>51</width>
             <height>20</height>
            </rect>
@@ -115,8 +139,8 @@
          <widget class="QCheckBox" name="transformation">
           <property name="geometry">
            <rect>
-            <x>330</x>
-            <y>30</y>
+            <x>190</x>
+            <y>70</y>
             <width>115</width>
             <height>20</height>
            </rect>
@@ -131,7 +155,7 @@
          <widget class="QCheckBox" name="color">
           <property name="geometry">
            <rect>
-            <x>80</x>
+            <x>10</x>
             <y>30</y>
             <width>61</width>
             <height>20</height>
@@ -147,7 +171,7 @@
          <widget class="QCheckBox" name="dcolor">
           <property name="geometry">
            <rect>
-            <x>80</x>
+            <x>10</x>
             <y>50</y>
             <width>71</width>
             <height>20</height>
@@ -160,7 +184,7 @@
          <widget class="QCheckBox" name="position">
           <property name="geometry">
            <rect>
-            <x>160</x>
+            <x>90</x>
             <y>30</y>
             <width>87</width>
             <height>20</height>
@@ -173,7 +197,7 @@
          <widget class="QCheckBox" name="dposition">
           <property name="geometry">
            <rect>
-            <x>160</x>
+            <x>90</x>
             <y>50</y>
             <width>87</width>
             <height>20</height>
@@ -186,7 +210,7 @@
          <widget class="QCheckBox" name="time">
           <property name="geometry">
            <rect>
-            <x>260</x>
+            <x>190</x>
             <y>30</y>
             <width>61</width>
             <height>20</height>
@@ -199,8 +223,8 @@
          <widget class="QCheckBox" name="signal">
           <property name="geometry">
            <rect>
-            <x>330</x>
-            <y>50</y>
+            <x>90</x>
+            <y>70</y>
             <width>87</width>
             <height>20</height>
            </rect>
@@ -212,7 +236,7 @@
          <widget class="QCheckBox" name="dtime">
           <property name="geometry">
            <rect>
-            <x>260</x>
+            <x>190</x>
             <y>50</y>
             <width>71</width>
             <height>20</height>
@@ -222,107 +246,120 @@
            <string>dtime</string>
           </property>
          </widget>
+         <zorder>transformation</zorder>
+         <zorder>color</zorder>
+         <zorder>dcolor</zorder>
+         <zorder>position</zorder>
+         <zorder>dposition</zorder>
+         <zorder>time</zorder>
+         <zorder>signal</zorder>
+         <zorder>dtime</zorder>
+         <zorder>size</zorder>
         </widget>
        </item>
        <item>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
-          <widget class="QRadioButton" name="toCreateButton">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
-           <property name="text">
-            <string>create object</string>
-           </property>
-           <property name="checkable">
-            <bool>true</bool>
-           </property>
-           <property name="checked">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QComboBox" name="typeList">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
+          <layout class="QHBoxLayout" name="horizontalLayout_5">
            <item>
-            <property name="text">
-             <string/>
-            </property>
+            <widget class="QRadioButton" name="toCreateButton">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>create</string>
+             </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
+             <property name="checked">
+              <bool>false</bool>
+             </property>
+            </widget>
            </item>
            <item>
-            <property name="text">
-             <string>curve</string>
-            </property>
+            <widget class="QComboBox" name="typeList">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <item>
+              <property name="text">
+               <string/>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>curve</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>ellipse</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>fastgraph</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>file</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>gmnf</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>graph</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>grid</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>html</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>layer</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>line xy</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>polygon</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>rect</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>svgf</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>txt</string>
+              </property>
+             </item>
+            </widget>
            </item>
-           <item>
-            <property name="text">
-             <string>ellipse</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>fastgraph</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>file</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>gmnf</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>graph</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>grid</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>html</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>layer</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>line xy</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>polygon</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>rect</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>svgf</string>
-            </property>
-           </item>
-           <item>
-            <property name="text">
-             <string>txt</string>
-            </property>
-           </item>
-          </widget>
+          </layout>
          </item>
          <item>
           <widget class="QLineEdit" name="creationValue">
@@ -334,21 +371,13 @@
            </property>
           </widget>
          </item>
-        </layout>
-       </item>
-       <item>
-        <layout class="QVBoxLayout" name="verticalLayout_4">
          <item>
-          <widget class="QPushButton" name="removeButton">
-           <property name="text">
-            <string>del</string>
+          <widget class="QPushButton" name="options">
+           <property name="enabled">
+            <bool>false</bool>
            </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pushButton">
            <property name="text">
-            <string>opt</string>
+            <string>advanced options</string>
            </property>
           </widget>
          </item>
