--- a/forms/maininterface.ui
+++ b/forms/maininterface.ui
@@ -6,13 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1050</width>
+    <width>870</width>
     <height>600</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>1050</width>
+    <width>870</width>
     <height>600</height>
    </size>
   </property>
@@ -34,6 +34,13 @@
         </size>
        </property>
       </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="clearButton">
+       <property name="text">
+        <string>Clear all</string>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QPushButton" name="newLineButton">
@@ -125,7 +132,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>1024</width>
+        <width>844</width>
         <height>532</height>
        </rect>
       </property>
