fix a bug with files extension, add comments

--- a/forms/inscoreline.ui
+++ b/forms/inscoreline.ui
@@ -324,7 +324,7 @@
              </item>
              <item>
               <property name="text">
-               <string>html</string>
+               <string>htmlf</string>
               </property>
              </item>
              <item>
